# universal-unpacker

./: Cargo.toml  README.md  TODO.md
src/: main.rs  util.rs
src/cli/: godot.rs  mod.rs  renpy.rs  source_engine.rs
src/extract/: mod.rs
src/extract/godot/: archive.rs  mod.rs  resource.rs
src/extract/godot/compression/: compression.rs  reader.rs
src/extract/godot/texture/: mod.rs
src/extract/renpy/: archive.rs  mod.rs  script.rs
src/extract/renpy/decompile/: ast.rs  mod.rs
src/extract/source_engine/: mod.rs  vpk.rs
src/extract/source_engine/source1/: mod.rs  vtf.rs
src/godot/: archive.rs  ctex.rs  mod.rs  resource.rs
src/godot/compression/: compression.rs  mod.rs  reader.rs
src/godot/texture/: mod.rs  v3stream2d.rs  v4compressed2d.rs
src/renpy/: archive.rs  mod.rs  script.rs
src/util/: mod.rs  pickle.rs  read_ext.rs  virtual_fs.rs
src/util/pickle/: error.rs  mod.rs  parser.rs  pickle.rs
