[package]
name = "universal-unpacker"
description = "A simple command line tool to extract assets from a variety of archival formats. (Mainly game archives)"
repository = "https://github.com/Vulae/universal-unpacker"
license = "MIT"
version = "1.0.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.2"
bitstream-io = "2.2.0"
clap = { version = "4.5.1", features = ["derive"] }
zstd = "0.13.0"
